--- a/Insurance/WebContent/scripts/directives/header/header-notification/header-notification.html
+++ b/Insurance/WebContent/scripts/directives/header/header-notification/header-notification.html
@@ -1,13 +1,11 @@
 <ul class="nav navbar-top-links navbar-right">
-	<a class="navbar-brand">Developement Purpose</a>
+	<a class="navbar-brand">Development Purpose</a>
 	<a class="navbar-brand" ui-sref="dashboard.customer">Customer</a>
 	<a class="navbar-brand" ui-sref="dashboard.manager">Manager</a>
 	<a class="navbar-brand" ui-sref="dashboard.third">Third</a>
 	
-	
-	
-    <a class="navbar-brand" ui-sref="dashboard.login">Login</a>
-    <a class="navbar-brand" ui-sref="dashboard.register">Register</a>
+  <a class="navbar-brand" ui-sref="dashboard.login">Login</a>
+  <a class="navbar-brand" ui-sref="dashboard.register">Register</a>
     
     
 <!--     /.dropdown -->
